--- a/student_management_app/templates/hod_template/add_staff_template.html
+++ b/student_management_app/templates/hod_template/add_staff_template.html
@@ -1,7 +1,7 @@
 {% extends 'hod_template/base_template.html' %}
 
 {% block page_title %}
-    Add Staff
+    O'qituvchi qo'shish
 {% endblock page_title %}
 
 {% block main_content %}
@@ -16,7 +16,7 @@
                     <!-- general form elements -->
                     <div class="card card-primary">
                     <div class="card-header">
-                        <h3 class="card-title">Add Staff</h3>
+                        <h3 class="card-title">O'qituvchi qo'shish</h3>
                     </div>
                     <!-- /.card-header -->
                     <!-- form start -->
@@ -52,33 +52,33 @@
 
                         <div class="card-body">
                             <div class="form-group">
-                                <label>Email address</label>
-                                <input type="email" class="form-control" name="email" placeholder="Enter email" id="id_email">
+                                <label>Email manzil</label>
+                                <input type="email" class="form-control" name="email" placeholder="Email manzil kiriting..." id="id_email">
                             </div>
 
                             <div class="form-group">
-                                <label>Username</label>
-                                <input type="text" class="form-control" name="username" placeholder="Username" id="id_username">
+                                <label>Foydalanuvchi nomi</label>
+                                <input type="text" class="form-control" name="username" placeholder="Foydalanuvchi nomini kiriting..." id="id_username">
                             </div>
 
                             <div class="form-group">
-                                <label>Password</label>
-                                <input type="password" class="form-control" name="password" placeholder="Password">
+                                <label>Parol</label>
+                                <input type="password" class="form-control" name="password" placeholder="Parol kiriting...">
                             </div>
 
                             <div class="form-group">
-                                <label>First Name</label>
-                                <input type="text" class="form-control" name="first_name" placeholder="First Name">
+                                <label>Ism</label>
+                                <input type="text" class="form-control" name="first_name" placeholder="Ism kiriting...">
                             </div>
 
                             <div class="form-group">
-                                <label>Last Name</label>
-                                <input type="text" class="form-control" name="last_name" placeholder="Last Name">
+                                <label>Familiya</label>
+                                <input type="text" class="form-control" name="last_name" placeholder="Familiya kiriting....">
                             </div>
 
                             <div class="form-group">
-                                <label>Address</label>
-                                <textarea class="form-control" name="address" placeholder="Address"></textarea>
+                                <label>Manzil</label>
+                                <textarea class="form-control" name="address" placeholder="Manzil kiriting..."></textarea>
                             </div>
 
                             
@@ -88,7 +88,7 @@
                         <!-- /.card-body -->
 
                         <div class="card-footer">
-                        <button type="submit" class="btn btn-primary">Add Staff</button>
+                        <button type="submit" class="btn btn-primary">Ro'yxatga olish</button>
                         </div>
                     </form>
                     </div>
