--- a/student_management_app/templates/hod_template/admin_view_attendance.html
+++ b/student_management_app/templates/hod_template/admin_view_attendance.html
@@ -1,7 +1,7 @@
 {% extends 'hod_template/base_template.html' %}
 
 {% block page_title %}
-    View Attendance
+    Davomatni ko'rish
 {% endblock page_title %}
 
 {% block main_content %}
@@ -16,7 +16,7 @@
                     <!-- general form elements -->
                     <div class="card card-primary">
                     <div class="card-header">
-                        <h3 class="card-title">View Attendance</h3>
+                        <h3 class="card-title">Davomatni yuritish</h3>
                     </div>
                     <!-- /.card-header -->
 
@@ -49,7 +49,7 @@
                         <div class="card-body">
                            
                             <div class="form-group">
-                                <label>Subject </label>
+                                <label>Mavzu </label>
                                 <select class="form-control" name="subject" id="subject">
                                     {% for subject in subjects %}
                                         <option value="{{ subject.id }}">{{ subject.subject_name }}</option>
@@ -58,7 +58,7 @@
                             </div>
 
                             <div class="form-group">
-                                <label>Session Year </label>
+                                <label>Sessiya yili </label>
                                 <select class="form-control" name="session_year_id" id="session_year_id">
                                     {% for session_year in session_years %}
                                         <option value="{{ session_year.id }}">{{ session_year.session_start_year }} to {{ session_year.session_end_year }}</option>
@@ -71,12 +71,12 @@
                         <!-- /.card-body -->
 
                         <div class="card-footer">
-                            <button type="button" class="btn btn-primary" id="fetch_attendance">Fetch Attendance Date</button>
+                            <button type="button" class="btn btn-primary" id="fetch_attendance">Davomatni belgilash</button>
                         </div>
 
                         <div class="card-footer">
                             <div class="form-group" id="attendance_block" style="display:none;">
-                                    <label>Attendance Date </label>
+                                    <label>Davomat sanasi </label>
                                     <select class="form-control" name="attendance_date" id="attendance_date">
                                         
                                     </select>
@@ -95,13 +95,13 @@
 
                             <div class="card-footer" id="fetch_student_block" style="display:none;">
 
-                                <button type="button" class="btn btn-primary" id="fetch_student">Fetch Student Data</button>
+                                <button type="button" class="btn btn-primary" id="fetch_student">Talabalarni davomatini belgilash</button>
                             </div>
                             
                             <!-- /.card-body -->
 
                             {% comment %} <div class="card-footer">
-                                <button type="button" class="btn btn-primary" id="save_student">Save Data</button>
+                                <button type="button" class="btn btn-primary" id="save_student">Ma'lumotlarni saqlash</button>
                             </div> {% endcomment %}
 
                         </div>
@@ -162,7 +162,7 @@
                     }
                     else
                     {
-                        $("#error_attendance").html("No Attendance Data Found.");
+                        $("#error_attendance").html("Davomat ma'lumoti aniqlanmadi");
                         $("#error_attendance").show();
                         $("#attendance_block").hide();
                         $("#fetch_student_block").hide();
@@ -172,7 +172,7 @@
                 })
 
                 .fail(function(){
-                    alert("Error in getting Attendance Dates.")
+                    alert("Davomat vaqtini olib bo'lmadi")
                     $("#error_attendance").html("");
                     $("#fetch_student_block").hide();
                     $("#attendance_block").hide();
@@ -201,7 +201,7 @@
                 var json_data=JSON.parse(response);
                 //console.log(json_data)
                 //Displaying Attendance Date Input and Students Attendance
-                var div_data="<div class='form-group'><label>Student Attendance: </label></div>"
+                var div_data="<div class='form-group'><label>Talabalar davomati: </label></div>"
                 div_data+="<div class='form-group'><div class='row'>"
 
                 for(key in json_data)
@@ -214,11 +214,11 @@
 
                     if(json_data[key]['status'])
                     {
-                        div_data+="<b>[ Present ]</b>";
+                        div_data+="<b>[ Qatnashdi ]</b>";
                     }
                     else
                     {
-                        div_data+="<b>[ Absent ]</b>";
+                        div_data+="<b>[ Qatnashmadi ]</b>";
                     }
                     //Displaying Present and Absent Ends Here
                     
@@ -231,7 +231,7 @@
 
             })
             .fail(function(){
-                alert("Error in Fetching Students.")
+                alert("Talabalar davomatida xatolik paydo bo'ldi!")
             })
 
 
