--- a/student_management_app/templates/hod_template/manage_student_template.html
+++ b/student_management_app/templates/hod_template/manage_student_template.html
@@ -1,7 +1,7 @@
 {% extends 'hod_template/base_template.html' %}
 
 {% block page_title %}
-    Manage Student
+    Talabalarni boshqarish
 {% endblock page_title %}
 
 {% block main_content %}
@@ -11,7 +11,7 @@
 <section class="content">
         <div class="container-fluid">
 
-            <a class="btn btn-primary" href="{% url 'add_student' %}" role="button">+ Add Student</a> <br/>&nbsp;
+            <a class="btn btn-primary" href="{% url 'add_student' %}" role="button">Talaba qo'shish +</a> <br/>&nbsp;
             
             {% if messages %}
                                 <div class="form-group">
@@ -43,11 +43,11 @@
                     <!-- general form elements -->
                     <div class="card">
                         <div class="card-header">
-                            <h3 class="card-title">Student Details</h3>
+                            <h3 class="card-title">Talabalar haqida ma'lumot</h3>
 
                             <div class="card-tools">
                             <div class="input-group input-group-sm" style="width: 150px;">
-                                <input type="text" name="table_search" class="form-control float-right" placeholder="Search">
+                                <input type="text" name="table_search" class="form-control float-right" placeholder="Qidirish...">
 
                                 <div class="input-group-append">
                                 <button type="submit" class="btn btn-default"><i class="fas fa-search"></i></button>
@@ -61,19 +61,19 @@
                             <thead>
                                 <tr>
                                 <th>ID</th>
-                                <th>First Name</th>
-                                <th>Last Name</th>
-                                <th>Username</th>
-                                <th>Email</th>
-                                <th>Address</th>
-                                <th>Gender</th>
-                                <th>Profile Pic</th>
-                                <th>Start Year</th>
-                                <th>End Year</th>
-                                <th>Course</th>
-                                <th>Last Login</th>
-                                <th>Date Joined</th>
-                                <th>Action</th>
+                                <th>Ismi</th>
+                                <th>Familiyasi</th>
+                                <th>Foydalanuvchi nomi</th>
+                                <th>Email manzili</th>
+                                <th>Manzili</th>
+                                <th>Jisni</th>
+                                <th>Profil rasmi</th>
+                                <th>Qabul boshlangan vaqti</th>
+                                <th>Qabul tugash vaqti</th>
+                                <th>Kursi</th>
+                                <th>Oxirgi kirilgan vaqti</th>
+                                <th>Qabul qilingan vaqt</th>
+                                <th>Harakat</th>
                                 </tr>
                             </thead>
                             <tbody>
@@ -93,8 +93,8 @@
                                 <td>{{ student.admin.last_login }}</td>
                                 <td>{{ student.admin.date_joined }}</td>
                                 <td>
-                                    <a href="{% url 'edit_student' student.admin.id %}" class="btn btn-success">Edit</a> 
-                                    <a href="{% url 'delete_student' student.admin.id %}" class="btn btn-danger">Delete</a>
+                                    <a href="{% url 'edit_student' student.admin.id %}" class="btn btn-info">Tahrirlash</a> 
+                                    <a href="{% url 'delete_student' student.admin.id %}" class="btn btn-danger">O'chirish</a>
                                 </td>
                                 </tr>
                                 {% endfor %}
