--- a/student_management_app/templates/hod_template/notification_template.html
+++ b/student_management_app/templates/hod_template/notification_template.html
@@ -14,11 +14,11 @@
                 <img src="{% static 'dist/img/user1-128x128.jpg' %}" alt="User Avatar" class="img-size-50 mr-3 img-circle">
                 <div class="media-body">
                   <h3 class="dropdown-item-title">
-                    Brad Diesel
+                    Shoh Abbos Ulug'murodov
                     <span class="float-right text-sm text-danger"><i class="fas fa-star"></i></span>
                   </h3>
-                  <p class="text-sm">Call me whenever you can...</p>
-                  <p class="text-sm text-muted"><i class="far fa-clock mr-1"></i> 4 Hours Ago</p>
+                  <p class="text-sm">Iloji bo'lsa, menga qo'ng'iroq qiling...</p>
+                  <p class="text-sm text-muted"><i class="far fa-clock mr-1"></i> 4 soat oldin</p>
                 </div>
               </div>
               <!-- Message End -->
@@ -33,8 +33,8 @@
                     John Pierce
                     <span class="float-right text-sm text-muted"><i class="fas fa-star"></i></span>
                   </h3>
-                  <p class="text-sm">I got your message bro</p>
-                  <p class="text-sm text-muted"><i class="far fa-clock mr-1"></i> 4 Hours Ago</p>
+                  <p class="text-sm">Men sizga xabar yubordim oshna</p>
+                  <p class="text-sm text-muted"><i class="far fa-clock mr-1"></i> 2 soat oldin</p>
                 </div>
               </div>
               <!-- Message End -->
@@ -49,14 +49,14 @@
                     Nora Silvester
                     <span class="float-right text-sm text-warning"><i class="fas fa-star"></i></span>
                   </h3>
-                  <p class="text-sm">The subject goes here</p>
-                  <p class="text-sm text-muted"><i class="far fa-clock mr-1"></i> 4 Hours Ago</p>
+                  <p class="text-sm">Mavzu bu yerda</p>
+                  <p class="text-sm text-muted"><i class="far fa-clock mr-1"></i> 1 soat oldin</p>
                 </div>
               </div>
               <!-- Message End -->
             </a>
             <div class="dropdown-divider"></div>
-            <a href="#" class="dropdown-item dropdown-footer">See All Messages</a>
+            <a href="#" class="dropdown-item dropdown-footer">Barcha xabarlarni ko'rish</a>
           </div>
         </li>
         <!-- Notifications Dropdown Menu -->
@@ -66,24 +66,24 @@
             <span class="badge badge-warning navbar-badge">15</span>
           </a>
           <div class="dropdown-menu dropdown-menu-lg dropdown-menu-right">
-            <span class="dropdown-item dropdown-header">15 Notifications</span>
+            <span class="dropdown-item dropdown-header">15 ta eslatma</span>
             <div class="dropdown-divider"></div>
             <a href="#" class="dropdown-item">
-              <i class="fas fa-envelope mr-2"></i> 4 new messages
-              <span class="float-right text-muted text-sm">3 mins</span>
+              <i class="fas fa-envelope mr-2"></i> 4 yangi xabar
+              <span class="float-right text-muted text-sm">3 minunt</span>
             </a>
             <div class="dropdown-divider"></div>
             <a href="#" class="dropdown-item">
-              <i class="fas fa-users mr-2"></i> 8 friend requests
-              <span class="float-right text-muted text-sm">12 hours</span>
+              <i class="fas fa-users mr-2"></i> 8 ta do'st so'rovi
+              <span class="float-right text-muted text-sm">12 soat</span>
             </a>
             <div class="dropdown-divider"></div>
             <a href="#" class="dropdown-item">
-              <i class="fas fa-file mr-2"></i> 3 new reports
+              <i class="fas fa-file mr-2"></i> 3 ta yangi xabarnoma
               <span class="float-right text-muted text-sm">2 days</span>
             </a>
             <div class="dropdown-divider"></div>
-            <a href="#" class="dropdown-item dropdown-footer">See All Notifications</a>
+            <a href="#" class="dropdown-item dropdown-footer">Barcha eslatmalarni ko'rish</a>
           </div>
         </li>
         <li class="nav-item">
