--- a/student_management_app/templates/hod_template/staff_feedback_template.html
+++ b/student_management_app/templates/hod_template/staff_feedback_template.html
@@ -1,7 +1,7 @@
 {% extends 'hod_template/base_template.html' %}
 
 {% block page_title %}
-    Staff Feedback
+    O'qituvchi feedbacki
 {% endblock page_title %}
 
 {% block main_content %}
@@ -16,7 +16,7 @@
                     <!-- general form elements -->
                     <div class="card card-primary">
                         <div class="card-header">
-                            <h3 class="card-title">Staff Feedback</h3>
+                            <h3 class="card-title">O'qituvchi feedbacki</h3>
                         </div>
                         <!-- /.card-header -->
 
@@ -25,11 +25,11 @@
                                 <thead>
                                 <tr>
                                     <th>ID</th>
-                                    <th>Staff ID</th>
-                                    <th>Staff Name</th>
-                                    <th>Message</th>
-                                    <th>Sended On</th>
-                                    <th>Reply</th>
+                                    <th>O'qituvchi ID</th>
+                                    <th>O'qituvchi ismi</th>
+                                    <th>Xabar matni</th>
+                                    <th>Yuborish</th>
+                                    <th>Qayta yuborish</th>
                                 </tr>
                                 </thead>
 
@@ -71,19 +71,19 @@
         <div class="modal-dialog">
             <div class="modal-content">
             <div class="modal-header">
-                <h5 class="modal-title" id="exampleModalLabel">Reply Feedback</h5>
+                <h5 class="modal-title" id="exampleModalLabel">Yozishmaga javob berish</h5>
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                 <span aria-hidden="true">&times;</span>
                 </button>
             </div>
             <div class="modal-body">
-                <p>Reply to: <b><span id="reply_name"></span></b></p>
+                <p>Yuborish: <b><span id="reply_name"></span></b></p>
                 <input type="hidden" id="reply_id" name="reply_id" />
                 <textarea class="form-control" rows="5" id="reply_message"></textarea>
             </div>
             <div class="modal-footer">
-                {% comment %} <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button> {% endcomment %}
-                <button type="button" class="btn btn-primary btn-block" id="reply_button">Reply</button>
+                {% comment %} <button type="button" class="btn btn-secondary" data-dismiss="modal">Yopish</button> {% endcomment %}
+                <button type="button" class="btn btn-primary btn-block" id="reply_button">Qayta yuborish</button>
             </div>
             </div>
         </div>
@@ -109,7 +109,7 @@
             $(document).on("click", "#reply_button", function(){
                 //Disabling the Button while data is being saved in Server
                 $(this).attr("disabled", "disabled")
-                $(this).text("Sending Reply...")
+                $(this).text("Qayta yuborish yuborilmoqda...")
 
                 //console.log("SAVE")
                 
@@ -131,11 +131,11 @@
                     
                     if(response=="True")
                     {
-                        alert("Reply Sent!")
+                        alert("Yuborildi!")
                     }
                     else
                     {
-                        alert("Failed to Send Reply!")
+                        alert("Yuborishda xatolik paydo bo'ldi!")
                     }
                     location.reload()
                     
@@ -143,7 +143,7 @@
                 })
 
                 .fail(function(){
-                    alert("Error in Sending Feedback Reply.")
+                    alert("Yozishmada muammo bor!")
                 })
 
             })
