--- a/student_management_app/templates/hod_template/student_feedback_template.html
+++ b/student_management_app/templates/hod_template/student_feedback_template.html
@@ -1,7 +1,7 @@
 {% extends 'hod_template/base_template.html' %}
 
 {% block page_title %}
-    Student Feedback
+    Talabalar feedbacki
 {% endblock page_title %}
 
 {% block main_content %}
@@ -16,7 +16,7 @@
                     <!-- general form elements -->
                     <div class="card card-primary">
                         <div class="card-header">
-                            <h3 class="card-title">Student Feedback</h3>
+                            <h3 class="card-title">Talaba feedbacki</h3>
                         </div>
                         <!-- /.card-header -->
 
@@ -25,12 +25,12 @@
                                 <thead>
                                 <tr>
                                     <th>ID</th>
-                                    <th>Student ID</th>
-                                    <th>Student Name</th>
-                                    <th>Student Session</th>
-                                    <th>Message</th>
-                                    <th>Sended On</th>
-                                    <th>Reply</th>
+                                    <th>Talaba ID</th>
+                                    <th>Talaba ismi</th>
+                                    <th>Talaba sessiyasi</th>
+                                    <th>Xabar</th>
+                                    <th>Yuborish</th>
+                                    <th>Qayta yuborish</th>
                                 </tr>
                                 </thead>
 
@@ -45,7 +45,7 @@
                                     <td>{{ feedback.created_at }}</td>
                                     <td>
                                         {% if feedback.feedback_reply == "" %}
-                                            <button class="btn btn-success reply_open_modal" data-toggle="modal" data-target="#replyModal">Reply</button>
+                                            <button class="btn btn-success reply_open_modal" data-toggle="modal" data-target="#replyModal">Qayta yuborish</button>
                                         {% else %}
                                             {{ feedback.feedback_reply }}
                                         {% endif %}
@@ -73,19 +73,19 @@
         <div class="modal-dialog">
             <div class="modal-content">
             <div class="modal-header">
-                <h5 class="modal-title" id="exampleModalLabel">Reply Feedback</h5>
+                <h5 class="modal-title" id="exampleModalLabel">Yozishmani qayta yuborish</h5>
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                 <span aria-hidden="true">&times;</span>
                 </button>
             </div>
             <div class="modal-body">
-                <p>Reply to: <b><span id="reply_name"></span></b></p>
+                <p>Yuborish: <b><span id="reply_name"></span></b></p>
                 <input type="hidden" id="reply_id" name="reply_id" />
                 <textarea class="form-control" rows="5" id="reply_message"></textarea>
             </div>
             <div class="modal-footer">
-                {% comment %} <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button> {% endcomment %}
-                <button type="button" class="btn btn-primary btn-block" id="reply_button">Reply</button>
+                {% comment %} <button type="button" class="btn btn-secondary" data-dismiss="modal">Yopish</button> {% endcomment %}
+                <button type="button" class="btn btn-primary btn-block" id="reply_button">Qayta yuborish</button>
             </div>
             </div>
         </div>
@@ -111,7 +111,7 @@
             $(document).on("click", "#reply_button", function(){
                 //Disabling the Button while data is being saved in Server
                 $(this).attr("disabled", "disabled")
-                $(this).text("Sending Reply...")
+                $(this).text("Qayta yuborish yuborilmoqda...")
 
                 //console.log("SAVE")
                 
@@ -133,11 +133,11 @@
                     
                     if(response=="True")
                     {
-                        alert("Reply Sent!")
+                        alert("Qayta yuborish yuborildi!")
                     }
                     else
                     {
-                        alert("Failed to Send Reply!")
+                        alert("Qayta yuborish yuborilmadi!")
                     }
                     location.reload()
                     
@@ -145,7 +145,7 @@
                 })
 
                 .fail(function(){
-                    alert("Error in Sending Feedback Reply.")
+                    alert("Yozishmani yuborishda xatolik sodir bo'ldi!")
                 })
 
             })
