--- a/student_management_app/templates/student_template/student_view_attendance.html
+++ b/student_management_app/templates/student_template/student_view_attendance.html
@@ -1,7 +1,7 @@
 {% extends 'student_template/base_template.html' %}
 
 {% block page_title %}
-    View Attendance Data
+    Davomat ma'lumotlarini ko'rish
 {% endblock page_title %}
 
 {% block main_content %}
@@ -16,7 +16,7 @@
                     <!-- general form elements -->
                     <div class="card card-primary">
                     <div class="card-header">
-                        <h3 class="card-title">View Attendance</h3>
+                        <h3 class="card-title">Davomat ma'lumoti</h3>
                     </div>
                     <!-- /.card-header -->
 
@@ -51,7 +51,7 @@
                         <div class="card-body">
                            
                             <div class="form-group">
-                                <label>Subject </label>
+                                <label>Fan </label>
                                 <select class="form-control" name="subject" id="subject">
                                     {% for subject in subjects %}
                                         <option value="{{ subject.id }}">{{ subject.subject_name }}</option>
@@ -62,14 +62,14 @@
                             <div class="row">
                                 <div class="col-lg-6">
                                     <div class="form-group">
-                                        <label>Start Date </label>
+                                        <label>Boshlanish vaqti </label>
                                         <input type="date" class="form-control" name="start_date" />
                                     </div>
                                 </div>
                                 
                                 <div class="col-lg-6">
                                     <div class="form-group">
-                                        <label>End Date </label>
+                                        <label>Tugash vaqti </label>
                                         <input type="date" class="form-control" name="end_date" />
                                     </div>
                                 </div>
@@ -81,7 +81,7 @@
                         <!-- /.card-body -->
 
                         <div class="card-footer">
-                        <button type="submit" class="btn btn-primary" id="fetch_student">Fetch Attendance</button>
+                        <button type="submit" class="btn btn-primary" id="fetch_student">Davomatni belgilash</button>
                         </div>
 
                         {% comment %} Displaying Students Here {% endcomment %}
