--- a/student_management_app/templates/hod_template/edit_session_template.html
+++ b/student_management_app/templates/hod_template/edit_session_template.html
@@ -1,7 +1,7 @@
 {% extends 'hod_template/base_template.html' %}
 
 {% block page_title %}
-    Edit Session Year
+    Sessiya yilini tahrirlash
 {% endblock page_title %}
 
 {% block main_content %}
@@ -52,12 +52,12 @@
 
                         <div class="card-body">
                             <div class="form-group">
-                                <label>Session Start Year </label>
+                                <label>Sessiya boshlangan yil </label>
                                 <input type="date" class="form-control" name="session_start_year" value="{{ session_year.session_start_year|date:'Y-m-d' }}">
                             </div>
 
                             <div class="form-group">
-                                <label>Session End Year </label>
+                                <label>Sessiyaning tugash yili </label>
                                 <input type="date" class="form-control" name="session_end_year" value="{{ session_year.session_end_year|date:'Y-m-d' }}">
                             </div>
 
@@ -66,7 +66,7 @@
 
                         <div class="card-footer">
                         <input type="hidden" name="session_id" value="{{ session_year.id }}" />
-                        <button type="submit" class="btn btn-primary">Update Session Year</button>
+                        <button type="submit" class="btn btn-primary">Sessiya vaqtini yangilash</button>
                         </div>
                     </form>
                     </div>
