--- a/student_management_app/templates/hod_template/edit_staff_template.html
+++ b/student_management_app/templates/hod_template/edit_staff_template.html
@@ -1,7 +1,7 @@
 {% extends 'hod_template/base_template.html' %}
 
 {% block page_title %}
-    Edit Staff | Username: {{ staff.admin.username }} | #ID : {{ staff.admin.id }}
+    O"qituvchi ma'lumotini tahrirlash | Foydalanuvchi nomi: {{ staff.admin.username }} | #IDsi : {{ staff.admin.id }}
 {% endblock page_title %}
 
 {% block main_content %}
@@ -16,7 +16,7 @@
                     <!-- general form elements -->
                     <div class="card card-primary">
                     <div class="card-header">
-                        <h3 class="card-title">Edit Staff</h3>
+                        <h3 class="card-title">O'qituvchi ma'lumotlarini tahrirlash</h3>
                     </div>
                     <!-- /.card-header -->
                     <!-- form start -->
@@ -52,33 +52,33 @@
 
                         <div class="card-body">
                             <div class="form-group">
-                                <label>Email address</label>
+                                <label>Email manzil</label>
                                 <input type="email" class="form-control" name="email" value="{{ staff.admin.email }}">
                             </div>
 
                             <div class="form-group">
-                                <label>Username</label>
+                                <label>Foydalanuvchi nomi</label>
                                 <input type="text" class="form-control" name="username" value="{{ staff.admin.username }}">
                             </div>
 
                             {% comment %} <div class="form-group">
-                                <label>Password</label>
+                                <label>Parol</label>
                                 <input type="password" class="form-control" name="password" value="{{ staff.admin.password }}">
                             </div> {% endcomment %}
 
                             <div class="form-group">
-                                <label>First Name</label>
+                                <label>Ism</label>
                                 <input type="text" class="form-control" name="first_name" value="{{ staff.admin.first_name }}">
                             </div>
 
                             <div class="form-group">
-                                <label>Last Name</label>
+                                <label>Familiya</label>
                                 <input type="text" class="form-control" name="last_name" value="{{ staff.admin.last_name }}">
                                 <input type="hidden" name="staff_id" value="{{ staff.admin.id }}" />
                             </div>
 
                             <div class="form-group">
-                                <label>Address</label>
+                                <label>Manzil</label>
                                 <textarea class="form-control" name="address">{{ staff.address }}</textarea>
                             </div>
 
@@ -89,7 +89,7 @@
                         <!-- /.card-body -->
 
                         <div class="card-footer">
-                        <button type="submit" class="btn btn-primary">Update Staff</button>
+                        <button type="submit" class="btn btn-primary">O'qituvchi ma'lumotlarini yangilash</button>
                         </div>
                     </form>
                     </div>
