--- a/student_management_app/templates/hod_template/edit_subject_template.html
+++ b/student_management_app/templates/hod_template/edit_subject_template.html
@@ -1,7 +1,7 @@
 {% extends 'hod_template/base_template.html' %}
 
 {% block page_title %}
-    Edit Subject | #ID : {{ subject.id }}
+    Fan ma'lumotlarini tahrirlash | #IDsi : {{ subject.id }}
 {% endblock page_title %}
 
 {% block main_content %}
@@ -16,7 +16,7 @@
                     <!-- general form elements -->
                     <div class="card card-primary">
                     <div class="card-header">
-                        <h3 class="card-title">Edit Subject</h3>
+                        <h3 class="card-title">Mavzularni tahrirlash</h3>
                     </div>
                     <!-- /.card-header -->
                     <!-- form start -->
@@ -52,12 +52,12 @@
 
                         <div class="card-body">
                             <div class="form-group">
-                                <label>Subject Name </label>
+                                <label>Fan nomi </label>
                                 <input type="text" class="form-control" name="subject" value="{{ subject.subject_name }}">
                             </div>
 
                             <div class="form-group">
-                                <label>Course </label>
+                                <label>Kurs </label>
                                 <select class="form-control" name="course">
                                     {% for course in courses %}
                                         <option value="{{ course.id }}" {% if course.id == subject.course_id.id %} selected {% endif %}>{{ course.course_name }}</option>
@@ -66,7 +66,7 @@
                             </div>
 
                             <div class="form-group">
-                                <label>Staff </label>
+                                <label>O'qituvchi </label>
                                 <select class="form-control" name="staff">
                                     {% for staff in staffs %}
                                         <option value="{{ staff.id }}" {% if staff.id == subject.staff_id.id %} selected {% endif %}>{{ staff.first_name }} {{ staff.last_name }}</option>
@@ -81,7 +81,7 @@
 
                         <div class="card-footer">
                         
-                        <button type="submit" class="btn btn-primary">Update Subject</button>
+                        <button type="submit" class="btn btn-primary">Fanni yangilash</button>
                         </div>
                     </form>
                     </div>
