--- a/student_management_app/templates/hod_template/home_content.html
+++ b/student_management_app/templates/hod_template/home_content.html
@@ -14,12 +14,12 @@
                 <div class="inner">
                   <h3>{{ all_student_count }}</h3>
 
-                  <p>Total Students</p>
+                  <p>Jami talablar soni</p>
                 </div>
                 <div class="icon">
                   <i class="ion ion-stats-bars"></i>
                 </div>
-                <a href="{% url 'manage_student' %}" class="small-box-footer">More info <i class="fas fa-arrow-circle-right"></i></a>
+                <a href="{% url 'manage_student' %}" class="small-box-footer">Ko'proq ma'lumot olish... <i class="fas fa-arrow-circle-right"></i></a>
               </div>
             </div>
             <!-- ./col -->
@@ -29,12 +29,12 @@
                 <div class="inner">
                   <h3>{{ staff_count }}</h3>
 
-                  <p>Total Staffs</p>
+                  <p>Jami o'qituvchilar soni</p>
                 </div>
                 <div class="icon">
                   <i class="ion ion-stats-bars"></i>
                 </div>
-                <a href="{% url 'manage_staff' %}" class="small-box-footer">More info <i class="fas fa-arrow-circle-right"></i></a>
+                <a href="{% url 'manage_staff' %}" class="small-box-footer">Ko'proq ma'lumot olish... <i class="fas fa-arrow-circle-right"></i></a>
               </div>
             </div>
             <!-- ./col -->
@@ -45,12 +45,12 @@
                 <div class="inner">
                   <h3>{{ course_count }}</h3>
 
-                  <p>Total Courses</p>
+                  <p>Jami kurslar soni</p>
                 </div>
                 <div class="icon">
                   <i class="ion ion-stats-bars"></i>
                 </div>
-                <a href="{% url 'manage_course' %}" class="small-box-footer">More info <i class="fas fa-arrow-circle-right"></i></a>
+                <a href="{% url 'manage_course' %}" class="small-box-footer">Ko'proq ma'lumot olish... <i class="fas fa-arrow-circle-right"></i></a>
               </div>
             </div>
             <!-- ./col -->
@@ -60,12 +60,12 @@
                 <div class="inner">
                   <h3>{{ subject_count }}</h3>
 
-                  <p>Total Subjects</p>
+                  <p>Jami fanlar soni</p>
                 </div>
                 <div class="icon">
                   <i class="ion ion-stats-bars"></i>
                 </div>
-                <a href="{% url 'manage_subject' %}" class="small-box-footer">More info <i class="fas fa-arrow-circle-right"></i></a>
+                <a href="{% url 'manage_subject' %}" class="small-box-footer">Ko'proq ma'lumot olish... <i class="fas fa-arrow-circle-right"></i></a>
               </div>
             </div>
             <!-- ./col -->
@@ -77,7 +77,7 @@
               <!-- PIE CHART -->
               <div class="card card-danger">
                 <div class="card-header">
-                  <h3 class="card-title">Student and Staff Chart</h3>
+                  <h3 class="card-title">Talabalar va o'qituvchilar grafigi</h3>
 
                   <div class="card-tools">
                     <button type="button" class="btn btn-tool" data-card-widget="collapse"><i class="fas fa-minus"></i>
@@ -97,7 +97,7 @@
               <!-- DONUT CHART -->
               <div class="card card-danger">
                 <div class="card-header">
-                  <h3 class="card-title">Total Subjects in Each Course</h3>
+                  <h3 class="card-title">Har bir kursda jami fanlar ulushi</h3>
 
                   <div class="card-tools">
                     <button type="button" class="btn btn-tool" data-card-widget="collapse"><i class="fas fa-minus"></i>
@@ -121,7 +121,7 @@
               <!-- PIE CHART -->
               <div class="card card-info">
                 <div class="card-header">
-                  <h3 class="card-title">Total Student in Each Course</h3>
+                  <h3 class="card-title">Har bir kursda talabalar ulushi</h3>
 
                   <div class="card-tools">
                     <button type="button" class="btn btn-tool" data-card-widget="collapse"><i class="fas fa-minus"></i>
@@ -140,7 +140,7 @@
               <!-- PIE CHART -->
               <div class="card card-info">
                 <div class="card-header">
-                  <h3 class="card-title">Total Students in Each Subject</h3>
+                  <h3 class="card-title">Har bir fanda talabalar ulushi</h3>
 
                   <div class="card-tools">
                     <button type="button" class="btn btn-tool" data-card-widget="collapse"><i class="fas fa-minus"></i>
@@ -161,7 +161,7 @@
             <!-- BAR CHART -->
             <div class="card card-success">
               <div class="card-header">
-                <h3 class="card-title">Staff Attendance vs Leave</h3>
+                <h3 class="card-title">O'qituvchi davomati va tark etishi</h3>
 
                 <div class="card-tools">
                   <button type="button" class="btn btn-tool" data-card-widget="collapse"><i class="fas fa-minus"></i>
@@ -191,7 +191,7 @@
             <!-- BAR CHART -->
             <div class="card card-success">
               <div class="card-header">
-                <h3 class="card-title">Student Attendance vs Leave</h3>
+                <h3 class="card-title">Talabalar davomati va tark etish</h3>
 
                 <div class="card-tools">
                   <button type="button" class="btn btn-tool" data-card-widget="collapse"><i class="fas fa-minus"></i>
