--- a/student_management_app/templates/hod_template/manage_session_template.html
+++ b/student_management_app/templates/hod_template/manage_session_template.html
@@ -1,7 +1,7 @@
 {% extends 'hod_template/base_template.html' %}
 
 {% block page_title %}
-    Manage Session
+    Sessiyani boshqarish
 {% endblock page_title %}
 
 {% block main_content %}
@@ -11,7 +11,7 @@
 <section class="content">
         <div class="container-fluid">
 
-            <a class="btn btn-primary" href="{% url 'add_session' %}" role="button">+ Add Session</a> <br/>&nbsp;
+            <a class="btn btn-primary" href="{% url 'add_session' %}" role="button">Sessiya qo'shish +</a> <br/>&nbsp;
 
             {% if messages %}
                                 <div class="form-group">
@@ -42,11 +42,11 @@
                     <!-- general form elements -->
                     <div class="card">
                         <div class="card-header">
-                            <h3 class="card-title">Session Details</h3>
+                            <h3 class="card-title">Sessiya ma'lumotlari</h3>
 
                             <div class="card-tools">
                             <div class="input-group input-group-sm" style="width: 150px;">
-                                <input type="text" name="table_search" class="form-control float-right" placeholder="Search">
+                                <input type="text" name="table_search" class="form-control float-right" placeholder="Qidirish...">
 
                                 <div class="input-group-append">
                                 <button type="submit" class="btn btn-default"><i class="fas fa-search"></i></button>
@@ -60,9 +60,9 @@
                             <thead>
                                 <tr>
                                 <th>ID</th>
-                                <th>Session Start Year</th>
-                                <th>Session End Year</th>
-                                <th>Action</th>
+                                <th>Sessiya boshlanish vaqti</th>
+                                <th>Sessiya tugash vaqti</th>
+                                <th>Harakat</th>
                                 </tr>
                             </thead>
                             <tbody>
@@ -72,8 +72,8 @@
                                 <td>{{ session_year.session_start_year }}</td>
                                 <td>{{ session_year.session_end_year }}</td>
                                 <td>
-                                    <a href="{% url 'edit_session' session_year.id %}" class="btn btn-success">Edit</a> 
-                                    <a href="{% url 'delete_session' session_year.id %}" class="btn btn-danger">Delete</a>
+                                    <a href="{% url 'edit_session' session_year.id %}" class="btn btn-info">Tahrirlash</a> 
+                                    <a href="{% url 'delete_session' session_year.id %}" class="btn btn-danger">O'chirish</a>
                                 </td>
                                 </tr>
                                 {% endfor %}
