--- a/student_management_app/templates/hod_template/manage_staff_template.html
+++ b/student_management_app/templates/hod_template/manage_staff_template.html
@@ -1,7 +1,7 @@
 {% extends 'hod_template/base_template.html' %}
 
 {% block page_title %}
-    Manage Staff
+    O'qituvchilarni boshqarish
 {% endblock page_title %}
 
 {% block main_content %}
@@ -11,7 +11,7 @@
 <section class="content">
         <div class="container-fluid">
 
-            <a class="btn btn-primary" href="{% url 'add_staff' %}" role="button">+ Add Staff</a> <br/>&nbsp;
+            <a class="btn btn-primary" href="{% url 'add_staff' %}" role="button">O'qituvchi qo'shish +</a> <br/>&nbsp;
 
             {% if messages %}
                                 <div class="form-group">
@@ -44,11 +44,11 @@
                     <!-- general form elements -->
                     <div class="card">
                         <div class="card-header">
-                            <h3 class="card-title">Staff Details</h3>
+                            <h3 class="card-title">O'qituvchilar haqida ma'lumot</h3>
 
                             <div class="card-tools">
                             <div class="input-group input-group-sm" style="width: 150px;">
-                                <input type="text" name="table_search" class="form-control float-right" placeholder="Search">
+                                <input type="text" name="table_search" class="form-control float-right" placeholder="Qidirish...">
 
                                 <div class="input-group-append">
                                 <button type="submit" class="btn btn-default"><i class="fas fa-search"></i></button>
@@ -62,14 +62,14 @@
                             <thead>
                                 <tr>
                                 <th>ID</th>
-                                <th>First Name</th>
-                                <th>Last Name</th>
-                                <th>Username</th>
-                                <th>Email</th>
-                                <th>Address</th>
-                                <th>Last Login</th>
-                                <th>Date Joined</th>
-                                <th>Action</th>
+                                <th>Ismi</th>
+                                <th>Familiyasi</th>
+                                <th>Foydalanuvchi nomi</th>
+                                <th>Email manzil</th>
+                                <th>Manzil</th>
+                                <th>Oxirgi kirilgan vaqt</th>
+                                <th>Qo'shilgan vaqti</th>
+                                <th>Harakat</th>
                                 </tr>
                             </thead>
                             <tbody>
@@ -84,8 +84,8 @@
                                 <td>{{ staff.admin.last_login }}</td>
                                 <td>{{ staff.admin.date_joined }}</td>
                                 <td>
-                                    <a href="{% url 'edit_staff' staff.admin.id %}" class="btn btn-success">Edit</a> 
-                                    <a href="{% url 'delete_staff' staff.admin.id %}" class="btn btn-danger">Delete</a>
+                                    <a href="{% url 'edit_staff' staff.admin.id %}" class="btn btn-info">Tahrirlash</a> 
+                                    <a href="{% url 'delete_staff' staff.admin.id %}" class="btn btn-danger">O'chirish</a>
                                 </td>
                                 </tr>
                                 {% endfor %}
