--- a/student_management_app/templates/hod_template/manage_subject_template.html
+++ b/student_management_app/templates/hod_template/manage_subject_template.html
@@ -1,7 +1,7 @@
 {% extends 'hod_template/base_template.html' %}
 
 {% block page_title %}
-    Manage Subjects
+    Fanlarni boshqarish
 {% endblock page_title %}
 
 {% block main_content %}
@@ -11,7 +11,7 @@
 <section class="content">
         <div class="container-fluid">
 
-            <a class="btn btn-primary" href="{% url 'add_subject' %}" role="button">+ Add Subject</a> <br/>&nbsp;
+            <a class="btn btn-primary" href="{% url 'add_subject' %}" role="button">Fan qo'shish +</a> <br/>&nbsp;
 
             {% if messages %}
                                 <div class="form-group">
@@ -42,11 +42,11 @@
                     <!-- general form elements -->
                     <div class="card">
                         <div class="card-header">
-                            <h3 class="card-title">Subject Details</h3>
+                            <h3 class="card-title">Fan ma'lumotlari</h3>
 
                             <div class="card-tools">
                             <div class="input-group input-group-sm" style="width: 150px;">
-                                <input type="text" name="table_search" class="form-control float-right" placeholder="Search">
+                                <input type="text" name="table_search" class="form-control float-right" placeholder="Qidirish...">
 
                                 <div class="input-group-append">
                                 <button type="submit" class="btn btn-default"><i class="fas fa-search"></i></button>
@@ -60,12 +60,12 @@
                             <thead>
                                 <tr>
                                 <th>ID</th>
-                                <th>Subject Name</th>
-                                <th>Course</th>
-                                <th>Staff</th>
-                                <th>Created At</th>
-                                <th>Updated At</th>
-                                <th>Action</th>
+                                <th>Fan nomi</th>
+                                <th>Kurs</th>
+                                <th>O'qituvchi</th>
+                                <th>Yaratilgan vaqt</th>
+                                <th>Yangilangan vaqt</th>
+                                <th>Harakat</th>
                                 </tr>
                             </thead>
                             <tbody>
@@ -78,8 +78,8 @@
                                 <td>{{ subject.created_at }}</td>
                                 <td>{{ subject.updated_at }}</td>
                                 <td>
-                                    <a href="{% url 'edit_subject' subject.id %}" class="btn btn-success">Edit</a> 
-                                    <a href="{% url 'delete_subject' subject.id %}" class="btn btn-danger">Delete</a>
+                                    <a href="{% url 'edit_subject' subject.id %}" class="btn btn-info">Tahrirlash</a> 
+                                    <a href="{% url 'delete_subject' subject.id %}" class="btn btn-danger">O'chirish</a>
                                 </td>
                                 </tr>
                                 {% endfor %}
