--- a/student_management_app/templates/login.html
+++ b/student_management_app/templates/login.html
@@ -6,38 +6,38 @@
     <body class="hold-transition login-page">
 <div class="login-box">
   <div class="login-logo">
-    <a href="{% url 'login' %}"><b>Student </b>Management System</a>
+    <a href="{% url 'login' %}"><b>Talabalar </b>Bilimini baholash</a>
   </div>
   <!-- /.login-logo -->
   <div class="card">
     <div class="card-body login-card-body">
-      <p class="login-box-msg">Sign in to Student Management System</p>
+      <p class="login-box-msg">Talabalar bilimini baholash tizimiga kirish</p>
 
       <form action="{% url 'doLogin' %}" method="POST">
       {% csrf_token %}
         <div class="input-group mb-3">
-          <input type="email" class="form-control" placeholder="Email" name="email">
+          <input type="email" class="form-control" placeholder="Emailingiz..." name="email">
           <div class="input-group-append">
             <div class="input-group-text">
-              <span class="fas fa-envelope"></span>
+              <span class="fas fa-envelope-open-text"></span>
             </div>
           </div>
         </div>
         <div class="input-group mb-3">
-          <input type="password" class="form-control" placeholder="Password" name="password">
+          <input type="password" class="form-control" placeholder="Parolingiz..." name="password">
           <div class="input-group-append">
             <div class="input-group-text">
-              <span class="fas fa-lock"></span>
+              <span class="fas fa-fingerprint"></span>
             </div>
           </div>
         </div>
 
           <div class="col-12">
-            <button type="submit" class="btn btn-primary btn-block">Sign In</button>
+            <button type="submit" class="btn btn-primary btn-block">Kirish</button>
           </div>
 
           {% comment %} <div class="col-12 text-center">
-            <a href="{% url 'password_reset' %}">Reset Password</a>
+            <a href="{% url 'password_reset' %}">Parolni bekor qilish</a>
           </div>  {% endcomment %}
 
           {% comment %} Display Messages {% endcomment %}
