--- a/student_management_app/templates/staff_template/staff_profile.html
+++ b/student_management_app/templates/staff_template/staff_profile.html
@@ -1,7 +1,7 @@
 {% extends 'staff_template/base_template.html' %}
 
 {% block page_title %}
-    Update Profile
+    Profilni yangilash
 {% endblock page_title %}
 
 {% block main_content %}
@@ -16,7 +16,7 @@
                     <!-- general form elements -->
                     <div class="card card-primary">
                     <div class="card-header">
-                        <h3 class="card-title">Update Profile</h3>
+                        <h3 class="card-title">Profilni tahrirlash</h3>
                     </div>
                     <!-- /.card-header -->
                     <!-- form start -->
@@ -52,40 +52,40 @@
 
                         <div class="card-body">
                             <div class="form-group">
-                                <label>Username </label>
+                                <label>Foydalanuvchi nomi </label>
                                 <input type="text" class="form-control" name="username" value="{{ user.username }}" disabled="disabled">
                             </div>
 
                             <div class="form-group">
-                                <label>Email </label>
+                                <label>Email manzili </label>
                                 <input type="text" class="form-control" name="email" value="{{ user.email }}" disabled="disabled">
                             </div>
 
                             <div class="form-group">
-                                <label>First Name </label>
+                                <label>ismi </label>
                                 <input type="text" class="form-control" name="first_name" value="{{ user.first_name }}">
                             </div>
 
                             <div class="form-group">
-                                <label>Last Name </label>
+                                <label>Familiyasi </label>
                                 <input type="text" class="form-control" name="last_name" value="{{ user.last_name }}">
                             </div>
 
                             <div class="form-group">
-                                <label>Address </label>
+                                <label>Manzil </label>
                                 <textarea name="address" class="form-control" row="5">{{ staff.address }}</textarea>
                             </div>
 
                             <div class="form-group">
-                                <label>Password </label>
-                                <input type="text" class="form-control" name="password" placeholder="Fill only if you want to change Password.">
+                                <label>Parol </label>
+                                <input type="text" class="form-control" name="password" placeholder="Agar Parolni o'zgartirmoqchi bo'lsangiz bu maydonni to'ldiring...">
                             </div>
 
                         </div>
                         <!-- /.card-body -->
 
                         <div class="card-footer">
-                        <button type="submit" class="btn btn-primary">Update Profile</button>
+                        <button type="submit" class="btn btn-primary">Profilni yangilash</button>
                         </div>
                     </form>
                     </div>
