--- a/student_management_app/templates/staff_template/update_attendance_template.html
+++ b/student_management_app/templates/staff_template/update_attendance_template.html
@@ -1,7 +1,7 @@
 {% extends 'staff_template/base_template.html' %}
 
 {% block page_title %}
-    View Update Attendance
+    Davomat yangilanishini ko'rish
 {% endblock page_title %}
 
 {% block main_content %}
@@ -16,7 +16,7 @@
                     <!-- general form elements -->
                     <div class="card card-primary">
                     <div class="card-header">
-                        <h3 class="card-title">View Update Attendance</h3>
+                        <h3 class="card-title">Davomat yangilanishi</h3>
                     </div>
                     <!-- /.card-header -->
 
@@ -49,7 +49,7 @@
                         <div class="card-body">
                            
                             <div class="form-group">
-                                <label>Subject </label>
+                                <label>Fan </label>
                                 <select class="form-control" name="subject" id="subject">
                                     {% for subject in subjects %}
                                         <option value="{{ subject.id }}">{{ subject.subject_name }}</option>
@@ -58,7 +58,7 @@
                             </div>
 
                             <div class="form-group">
-                                <label>Session Year </label>
+                                <label>Sessiya yili </label>
                                 <select class="form-control" name="session_year_id" id="session_year_id">
                                     {% for session_year in session_years %}
                                         <option value="{{ session_year.id }}">{{ session_year.session_start_year }} to {{ session_year.session_end_year }}</option>
@@ -71,12 +71,12 @@
                         <!-- /.card-body -->
 
                         <div class="card-footer">
-                            <button type="button" class="btn btn-primary" id="fetch_attendance">Fetch Attendance Date</button>
+                            <button type="button" class="btn btn-primary" id="fetch_attendance">Qabul qilish vaqti</button>
                         </div>
 
                         <div class="card-footer">
                             <div class="form-group" id="attendance_block" style="display:none;">
-                                    <label>Attendance Date </label>
+                                    <label>Qabul vaqti </label>
                                     <select class="form-control" name="attendance_date" id="attendance_date">
                                         
                                     </select>
@@ -95,13 +95,13 @@
 
                             <div class="card-footer" id="fetch_student_block" style="display:none;">
 
-                                <button type="button" class="btn btn-primary" id="fetch_student">Fetch Student Data</button>
+                                <button type="button" class="btn btn-primary" id="fetch_student">Talaba Ma'lumotlarini Olish</button>
                             </div>
                             
                             <!-- /.card-body -->
 
                             {% comment %} <div class="card-footer">
-                                <button type="button" class="btn btn-primary" id="save_student">Save Data</button>
+                                <button type="button" class="btn btn-success" id="save_student">Saqlash</button>
                             </div> {% endcomment %}
 
                         </div>
@@ -162,11 +162,11 @@
                     }
                     else
                     {
-                        $("#error_attendance").html("No Attendance Data Found.");
+                        $("#error_attendance").html("Qabul qilinuvchi topilmadi.");
                         $("#error_attendance").show();
                         $("#attendance_block").hide();
                         $("#fetch_student_block").hide();
-                        $("#attendance_date")="" //Empty the Date Dropdown also
+                        $("#attendance_date")="" 
                     }
                     
                 })
@@ -201,7 +201,7 @@
                 var json_data=JSON.parse(response);
                 console.log(json_data)
                 //Displaying Attendance Date Input and Students Attendance
-                var div_data="<div class='form-group'><label>Student Attendance: </label></div>"
+                var div_data="<div class='form-group'><label>Qabul qilingan talabalar: </label></div>"
                 div_data+="<div class='form-group'><div class='row'>"
 
                 for(key in json_data)
@@ -222,11 +222,11 @@
 
                     if(json_data[key]['status'])
                     {
-                        div_data+="<b>[ Present ]</b>";
+                        div_data+="<b>[ Qabul ]</b>";
                     }
                     else
                     {
-                        div_data+="<b>[ Absent ]</b>";
+                        div_data+="<b>[ Rad ]</b>";
                     }
                     //Displaying Present and Absent Ends Here
                     
@@ -235,13 +235,13 @@
                 }
                 div_data+="</div></div>";
                 div_data+="<div class='form-group'>";
-                div_data+="<button id='save_attendance' class='btn btn-success' type='button'>Save Attendance Data</button>";
+                div_data+="<button id='save_attendance' class='btn btn-secondary' type='button'>Saqlash</button>";
                 div_data+="</div>";
                 $("#student_data").html(div_data);
 
             })
             .fail(function(){
-                alert("Error in Fetching Students.")
+                alert("Qabul xatoligi.")
             })
 
 
@@ -251,7 +251,7 @@
                 
                 //Disabling the Button while data is being saved in Server
                 $(this).attr("disabled", "disabled")
-                $(this).text("Saving Attendance Data...")
+                $(this).text("Ma'lumotlar saqlanayabdi...")
 
                 //console.log("SAVE")
                 var student_data=$("input[name='student_data[]'").map(function(){ 
@@ -283,11 +283,11 @@
                     
                     if(response=="OK")
                     {
-                        alert("Attendance Saved!")
+                        alert("Muvaffaqiyatli saqlandi!")
                     }
                     else
                     {
-                        alert("Failed to Save Attendance!")
+                        alert("Muvaffaqiyatsizlik!")
                     }
                     location.reload()
                     
@@ -295,7 +295,7 @@
                 })
 
                 .fail(function(){
-                    alert("Error in Saving Students Attendance Data.")
+                    alert("Talaba ma'lumotlarini saqlashdagi noma'lum xatolik paydo bo'ldi.")
                 })
 
             })
