--- a/student_management_app/templates/student_template/base_template.html
+++ b/student_management_app/templates/student_template/base_template.html
@@ -5,7 +5,7 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <title>Student Management System | Student Dashboard</title>
+  <title>Talabalar bilimini baholash | Talaba profili</title>
   <!-- Tell the browser to be responsive to screen width -->
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <!-- Font Awesome -->
@@ -48,7 +48,7 @@
         </li>
       </ul>
 
-      <h4 style="margin-left: 10px; margin-top: 5px;">Student Management System | Student Dashboard</h4>
+      <h4 style="margin-left: 10px; margin-top: 5px;">Talabalar bilimini baholash | Talaba profili</h4>
 
       <ul class="navbar-nav ml-auto">
       
@@ -60,12 +60,12 @@
         <div class="dropdown-menu dropdown-menu-lg dropdown-menu-right" style="left: inherit; right: 0px;">
           
           <a href="{% url 'student_profile' %}" class="dropdown-item">
-            <i class="fas fa-user-edit mr-2"></i> Update Profile
+            <i class="fas fa-user-edit mr-2"></i> Profilni tahrirlash
           </a>
 
           <div class="dropdown-divider"></div>
           <a href="{% url 'logout_user' %}" class="dropdown-item">
-            <i class="fas fa-power-off mr-2"></i> Logout
+            <i class="fas fa-power-off mr-2"></i> Chiqish
           </a>
           <div class="dropdown-divider"></div>
         </div>
@@ -93,7 +93,7 @@
             </div><!-- /.col -->
             <div class="col-sm-6">
               <ol class="breadcrumb float-sm-right">
-                <li class="breadcrumb-item"><a href="{% url 'student_home' %}">Home</a></li>
+                <li class="breadcrumb-item"><a href="{% url 'student_home' %}">Bosh sahifa</a></li>
               </ol>
             </div><!-- /.col -->
           </div><!-- /.row -->
