--- a/student_management_app/templates/student_template/sidebar_template.html
+++ b/student_management_app/templates/student_template/sidebar_template.html
@@ -5,7 +5,7 @@
       <a href="{% url 'student_home' %}" class="brand-link">
         <img src="{% static 'dist/img/AdminLTELogo.png' %}" alt="AdminLTE Logo" class="brand-image img-circle elevation-3"
             style="opacity: .8">
-        <span class="brand-text font-weight-light">Open university</span>
+        <span class="brand-text font-weight-light">Universitet</span>
       </a>
 
       <!-- Sidebar -->
@@ -13,7 +13,7 @@
         <!-- Sidebar user panel (optional) -->
         <div class="user-panel mt-3 pb-3 mb-3 d-flex">
           <div class="image">
-            <img src="{% static 'dist/img/user2-160x160.jpg' %}" class="img-circle elevation-2" alt="User Image">
+            <img src="{% static 'dist/img/user2-160x160.jpg' %}" class="img-circle elevation-2" alt="Foydalanuvchi rasmi">
           </div>
           <div class="info">
             <a href="{% url 'student_profile' %}" class="d-block">{{ user.first_name }} {{ user.last_name }}</a>
@@ -31,8 +31,8 @@
               <a href="{{ student_home }}" class="nav-link {% if request.path == student_home %} active {% endif %}">
                 <i class="nav-icon fas fa-tachometer-alt"></i>
                 <p>
-                  Home
-                  {% comment %} <span class="right badge badge-danger">New</span> {% endcomment %}
+                  Bosh sahifa
+                  {% comment %} <span class="right badge badge-danger">Yangi</span> {% endcomment %}
                 </p>
               </a>
             </li>
@@ -42,8 +42,8 @@
               <a href="{{ student_view_attendance }}" class="nav-link {% if request.path == student_view_attendance %} active {% endif %}">
                 <i class="nav-icon fas fa-calendar-alt"></i>
                 <p>
-                  View Attendance
-                  {% comment %} <span class="right badge badge-danger">New</span> {% endcomment %}
+                  Davomatni ko'rish
+                  {% comment %} <span class="right badge badge-danger">Yangi</span> {% endcomment %}
                 </p>
               </a>
             </li>
@@ -53,8 +53,8 @@
               <a href="{{ student_view_result }}" class="nav-link {% if request.path == student_view_result %} active {% endif %}">
                 <i class="nav-icon fas fa-tasks"></i>
                 <p>
-                  View Result
-                  {% comment %} <span class="right badge badge-danger">New</span> {% endcomment %}
+                  Natijani ko'rish
+                  {% comment %} <span class="right badge badge-danger">Yangi</span> {% endcomment %}
                 </p>
               </a>
             </li>
@@ -64,8 +64,8 @@
               <a href="{{ student_apply_leave }}" class="nav-link {% if request.path == student_apply_leave %} active {% endif %}">
                 <i class="nav-icon fas fa-envelope-open-text"></i>
                 <p>
-                  Apply for Leave
-                  {% comment %} <span class="right badge badge-danger">New</span> {% endcomment %}
+                  Tark etish so'rovi
+                  {% comment %} <span class="right badge badge-danger">Yangi</span> {% endcomment %}
                 </p>
               </a>
             </li>
@@ -75,8 +75,8 @@
               <a href="{{ student_feedback }}" class="nav-link {% if request.path == student_feedback %} active {% endif %}">
                 <i class="nav-icon fas fa-comments"></i>
                 <p>
-                  Send Feedback
-                  {% comment %} <span class="right badge badge-danger">New</span> {% endcomment %}
+                  Feedback yuborish
+                  {% comment %} <span class="right badge badge-danger">Yangi</span> {% endcomment %}
                 </p>
               </a>
             </li>
