--- a/student_management_app/templates/student_template/student_attendance_data.html
+++ b/student_management_app/templates/student_template/student_attendance_data.html
@@ -47,7 +47,7 @@
                     <!-- general form elements -->
                     <div class="card card-primary">
                     <div class="card-header">
-                        <h3 class="card-title">Attendance Data for {{ subject_obj.subject_name }}</h3>
+                        <h3 class="card-title">{{ subject_obj.subject_name }} uchun davomat ma'lumotlari</h3>
                     </div>
                     <!-- /.card-header -->
      
@@ -58,9 +58,9 @@
                                 {% if attendance_report.status == True %}
 
                                         <div class="col-lg-3 attendance_div_green">
-                                            <b>Date : {{ attendance_report.attendance_id.attendance_date }}</b> <br/>
+                                            <b>Vat : {{ attendance_report.attendance_id.attendance_date }}</b> <br/>
                                             
-                                                <b>[ Status : Present ]</b>
+                                                <b>[ Status : Qabul ]</b>
                                             
                                         </div>
                                     
@@ -70,7 +70,7 @@
                                         <div class="col-lg-3 attendance_div_red">
                                             <b>Date : {{ attendance_report.attendance_id.attendance_date }}</b> <br/>
                                             
-                                                <b>[ Status : Absent ]</b>
+                                                <b>[ Status : Rad ]</b>
                                             
                                         </div>
 
