--- a/student_management_app/templates/student_template/student_home_template.html
+++ b/student_management_app/templates/student_template/student_home_template.html
@@ -1,7 +1,7 @@
 {% extends 'student_template/base_template.html' %}
 
 {% block page_title %}
-    Student Home
+    Talaba bosh sahifasi
 {% endblock page_title %}
 
 {% block main_content %}
@@ -19,12 +19,12 @@
                     <div class="inner">
                         <h3>{{ total_attendance }}</h3>
 
-                        <p>Total Attendance</p>
+                        <p>Umumiy davomat</p>
                     </div>
                     <div class="icon">
                         <i class="ion ion-stats-bars"></i>
                     </div>
-                    <a href="{% url 'student_view_attendance' %}" class="small-box-footer">More info <i class="fas fa-arrow-circle-right"></i></a>
+                    <a href="{% url 'student_view_attendance' %}" class="small-box-footer">Ko'proq ma'lumot olish... <i class="fas fa-arrow-circle-right"></i></a>
                     </div>
                 </div>
                 <!-- ./col -->
@@ -34,12 +34,12 @@
                     <div class="inner">
                         <h3>{{ attendance_absent }}</h3>
 
-                        <p>Absent</p>
+                        <p>Qatnashmadi</p>
                     </div>
                     <div class="icon">
                         <i class="ion ion-stats-bars"></i>
                     </div>
-                    <a href="{% url 'student_view_attendance' %}" class="small-box-footer">More info <i class="fas fa-arrow-circle-right"></i></a>
+                    <a href="{% url 'student_view_attendance' %}" class="small-box-footer">Ko'proq ma'lumot olish... <i class="fas fa-arrow-circle-right"></i></a>
                     </div>
                 </div>
                 <!-- ./col -->
@@ -49,12 +49,12 @@
                     <div class="inner">
                         <h3>{{ attendance_present }}</h3>
 
-                        <p>Present</p>
+                        <p>Qatnashayabdi</p>
                     </div>
                     <div class="icon">
                         <i class="ion ion-stats-bars"></i>
                     </div>
-                    <a href="{% url 'student_view_attendance' %}" class="small-box-footer">More info <i class="fas fa-arrow-circle-right"></i></a>
+                    <a href="{% url 'student_view_attendance' %}" class="small-box-footer">Ko'proq ma'lumot olish... <i class="fas fa-arrow-circle-right"></i></a>
                     </div>
                 </div>
                 <!-- ./col -->
@@ -64,12 +64,12 @@
                     <div class="inner">
                         <h3>{{ total_subjects }}</h3>
 
-                        <p>Total Subjects</p>
+                        <p>Jami fanlari</p>
                     </div>
                     <div class="icon">
                         <i class="ion ion-pie-graph"></i>
                     </div>
-                    <a href="#" class="small-box-footer">More info <i class="fas fa-arrow-circle-right"></i></a>
+                    <a href="#" class="small-box-footer">Ko'proq ma'lumot olish... <i class="fas fa-arrow-circle-right"></i></a>
                     </div>
                 </div>
                 <!-- ./col -->
@@ -81,7 +81,7 @@
                     <!-- PIE CHART -->
                     <div class="card card-danger">
                     <div class="card-header">
-                        <h3 class="card-title">Total Attendance Chart</h3>
+                        <h3 class="card-title">Jami davomat grafigi</h3>
 
                         <div class="card-tools">
                         <button type="button" class="btn btn-tool" data-card-widget="collapse"><i class="fas fa-minus"></i>
@@ -101,7 +101,7 @@
                     <!-- BAR CHART -->
                     <div class="card card-success">
                     <div class="card-header">
-                        <h3 class="card-title">Attendance Statistics by Subjects</h3>
+                        <h3 class="card-title">Mavzular bo'yicha davomat statistikasi</h3>
 
                         <div class="card-tools">
                         <button type="button" class="btn btn-tool" data-card-widget="collapse"><i class="fas fa-minus"></i>
