--- a/student_management_app/templates/student_template/student_view_result.html
+++ b/student_management_app/templates/student_template/student_view_result.html
@@ -1,7 +1,7 @@
 {% extends 'student_template/base_template.html' %}
 
 {% block page_title %}
-    Result
+    Natijalar
 {% endblock page_title %}
 
 {% block main_content %}
@@ -17,7 +17,7 @@
                 <div class="col-md-12">
                     <div class="card card-primary">
                         <div class="card-header">
-                            <h3 class="card-title">Result</h3>
+                            <h3 class="card-title">Natialar ma'lumotlari</h3>
                         </div>
 
                         <div class="card-body">
@@ -26,10 +26,10 @@
                                     <thead class="thead-light">
                                     <tr>
                                         <th>#ID</th>
-                                        <th>Subject</th>
-                                        <th>Assignments Marks</th>
-                                        <th>Exam Marks</th>
-                                        <th>status</th>
+                                        <th>Fan</th>
+                                        <th>Topshiriq bahosi</th>
+                                        <th>Imtihon bahosi</th>
+                                        <th>holat</th>
                                     </tr>
                                     </thead>
                                     
@@ -40,10 +40,10 @@
                                         <td>{{ row.subject_assignment_marks }}</td>
                                         <td>{{ row.subject_exam_marks }}</td>
                                         <td>
-                                            {% if row.subject_exam_marks >= 40 %}
-                                                <span class="alert alert-success">Pass</span>
+                                            {% if row.subject_exam_marks >= 60 %}
+                                                <span class="alert alert-success">Muvaffaqiyatli</span>
                                             {% else %}
-                                                <span class="alert alert-danger">Fail</span>
+                                                <span class="alert alert-danger">Muvaffaqiyatsizlik</span>
                                             {% endif %}
                                         </td>
                                     </tr>
